// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TagThemes /> should render correctly 1`] = `
<Tag
  icon="cap cap-folder-2"
  size="15px"
>
  <span>
    Justice
     
  </span>
  <FormattedMessage
    id="et"
    values={Object {}}
  />
  <span>
     
    Éducation
  </span>
</Tag>
`;

exports[`<TagThemes /> should render correctly with other size 1`] = `
<Tag
  icon="cap cap-folder-2"
  size="12px"
>
  <span>
    Justice
     
  </span>
  <FormattedMessage
    id="et"
    values={Object {}}
  />
  <span>
     
    Éducation
  </span>
</Tag>
`;
